# theta-cgl

./: .gitignore  README.md
theta_cgl_py/: README.md  cgl.py  dim1.py  dim2.py  dim3.py  example.py  radical_44.sage  utilities.py
theta_cgl_rust/: Cargo.toml  README.md
theta_cgl_rust/benches/: th127.rs  th5248.rs  th64.rs
theta_cgl_rust/src/: dimension_one.rs  dimension_three.rs  dimension_two.rs  fields.rs  lib.rs  main.rs  util.rs
theta_cgl_rust/src/finitefield/: fp2_gen.rs  gf5_248_m64.rs  gf64_257.rs  gf_127_m64.rs  mod.rs  utils64.rs
verifications/: Proposition20.sage  Proposition8.sage  Theorem11.sage
